--- a/scratch/parallel_processing_test.ipynb
+++ b/scratch/parallel_processing_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,11 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def capture_and_return_emos(fl):\n",
+    "def capture_and_return_emos(t):\n",
+    "    fl = False\n",
+    "    start= time.time()\n",
     "    cap = cv2.VideoCapture(1)\n",
     "    print(\"Capture on\")\n",
     "    flag=True\n",
@@ -194,13 +196,17 @@
     "\n",
     "                # Press Esc to exit the program\n",
     "                # key = jcv2.waitKey(1) or 0xFF\n",
-    "\n",
+    "                stop = time.time()\n",
     "                # if event.is_set():\n",
     "                #     flag=False\n",
     "                #     break\n",
-    "                if fl: #key == 27:\n",
+    "                if stop - start >= t:\n",
+    "                    print(fl)\n",
+    "                    fl = True\n",
     "                    flag=False\n",
-    "                    break\n",
+    "                    break                                   \n",
+    "                 #key == 27:\n",
+    "\n",
     "    # jcv2.destroyAllWindows()\n",
     "    cap.release()\n",
     "    print(\"Capture off\")"
@@ -208,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,45 +249,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'multiprocessing' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Audit\\Uppsala - Masters Europe\\Semester 3\\IIS\\IIS_Project\\scratch\\parallel_processing_test.ipynb Cell 13\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Audit/Uppsala%20-%20Masters%20Europe/Semester%203/IIS/IIS_Project/scratch/parallel_processing_test.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m fl\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Audit/Uppsala%20-%20Masters%20Europe/Semester%203/IIS/IIS_Project/scratch/parallel_processing_test.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m process1 \u001b[39m=\u001b[39m multiprocessing\u001b[39m.\u001b[39mProcess(target\u001b[39m=\u001b[39mcapture_and_return_emos(\u001b[39mlambda\u001b[39;00m: fl, )) \u001b[39m#, daemon=False\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Audit/Uppsala%20-%20Masters%20Europe/Semester%203/IIS/IIS_Project/scratch/parallel_processing_test.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(fl)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Audit/Uppsala%20-%20Masters%20Europe/Semester%203/IIS/IIS_Project/scratch/parallel_processing_test.ipynb#X31sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m process1\u001b[39m.\u001b[39mstart()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'multiprocessing' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capture on\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "Capture off\n"
      ]
     }
    ],
    "source": [
-    "fl=False\n",
-    "\n",
-    "process1 = multiprocessing.Process(target=capture_and_return_emos(lambda: fl, )) #, daemon=False\n",
-    "print(fl)\n",
+    "process1 = multiprocessing.Process(target=capture_and_return_emos(6)) #, daemon=False\n",
     "process1.start()\n",
-    "start= time.time()\n",
-    "while True:\n",
-    "    stop = time.time() \n",
-    "    process1.join()\n",
-    "    if stop - start >= 6:\n",
-    "        print(fl)\n",
-    "        fl = True\n",
-    "        process1.terminate()\n",
-    "        process1.kill()\n",
-    "        break\n",
+    "process1.terminate()\n",
+    "\n",
     "# time.sleep(7)\n",
     "# stop = time.time()\n",
     "# if stop - start >= 6:\n",
@@ -293,11 +312,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anger 2\n",
+      "happiness 9\n",
+      "neutral 5\n",
+      "happiness 9\n"
+     ]
+    }
+   ],
    "source": [
-    "len(EMO_LIST)"
+    "#len(EMO_LIST)\n",
+    "max=0\n",
+    "for i in np.unique(EMO_LIST):\n",
+    "    print(i, np.char.count(EMO_LIST, i).sum())\n",
+    "    if np.char.count(EMO_LIST, i).sum() > max:\n",
+    "        max = np.char.count(EMO_LIST, i).sum()\n",
+    "        emo = i\n",
+    "print(emo, max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['neutral',\n",
+       " 'neutral',\n",
+       " 'neutral',\n",
+       " 'neutral',\n",
+       " 'neutral',\n",
+       " 'happiness',\n",
+       " 'happiness',\n",
+       " 'happiness',\n",
+       " 'happiness',\n",
+       " 'happiness',\n",
+       " 'anger',\n",
+       " 'happiness',\n",
+       " 'happiness',\n",
+       " 'happiness',\n",
+       " 'anger',\n",
+       " 'happiness']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EMO_LIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "\n",
+    "for i in range(10000):\n",
+    "    print('', end='')\n",
+    "    ft=time.time()\n",
+    "\n",
+    "print('\\n', f'{(ft-st):.2f}')\n"
    ]
   },
   {
