--- a/scratch/parallel_processing_test.ipynb
+++ b/scratch/parallel_processing_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,6 @@
     "import time as t\n",
     "from time import sleep\n",
     "from furhat_remote_api import FurhatRemoteAPI\n",
-    "from numpy.random import randint\n",
     "\n",
     "import time\n",
     "import sys\n",
@@ -25,44 +24,8 @@
     "import threading\n",
     "import os\n",
     "from torch import nn\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class thread_with_trace(threading.Thread):\n",
-    "  def __init__(self, *args, **keywords):\n",
-    "    threading.Thread.__init__(self, *args, **keywords)\n",
-    "    self.killed = False\n",
-    " \n",
-    "  def start(self):\n",
-    "    self.__run_backup = self.run\n",
-    "    self.run = self.__run      \n",
-    "    threading.Thread.start(self)\n",
-    " \n",
-    "  def __run(self):\n",
-    "    sys.settrace(self.globaltrace)\n",
-    "    self.__run_backup()\n",
-    "    self.run = self.__run_backup\n",
-    " \n",
-    "  def globaltrace(self, frame, event, arg):\n",
-    "    if event == 'call':\n",
-    "      return self.localtrace\n",
-    "    else:\n",
-    "      return None\n",
-    " \n",
-    "  def localtrace(self, frame, event, arg):\n",
-    "    if self.killed:\n",
-    "      if event == 'line':\n",
-    "        raise SystemExit()\n",
-    "    return self.localtrace\n",
-    " \n",
-    "  def kill(self):\n",
-    "    self.killed = True"
+    "import torch\n",
+    "import ray"
    ]
   },
   {
@@ -74,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'Successfully changed my LEDs', 'success': True}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "furhat.set_led(red=100, green=50, blue=50)"
    ]
@@ -101,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +105,12 @@
     "DIR_PATH=str(path) + '\\\\'\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model = torch.load(Path(DIR_PATH + 'models\\\\best_model_12.pt') ).to(device)"
+    "model = torch.load(Path(DIR_PATH + 'models\\\\best_model_12.pt') ).to(device) #best_emo_model(local_path).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,10 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#@ray.remote\n",
     "def capture_and_return_emos(t):\n",
     "    fl = False\n",
     "    start= time.time()\n",
@@ -244,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -273,12 +248,6 @@
       "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
       "  warnings.warn(\n",
       "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
       "  warnings.warn(\n"
      ]
     },
@@ -292,17 +261,38 @@
     }
    ],
    "source": [
-    "process1 = multiprocessing.Process(target=capture_and_return_emos(6)) #, daemon=False\n",
-    "process1.start()\n",
-    "process1.terminate()\n",
+    "from time import sleep\n",
     "\n",
-    "# time.sleep(7)\n",
-    "# stop = time.time()\n",
-    "# if stop - start >= 6:\n",
-    "#     fl = True\n",
-    "# else:\n",
-    "#     fl= False\n",
-    "    \n"
+    "# @ray.remote\n",
+    "def bsay(line):\n",
+    "    furhat.say(text=line, blocking=True)\n",
+    "    sleep(3)\n",
+    "    furhat.say(text=line, blocking=True)\n",
+    "    sleep(3)\n",
+    "    furhat.say(text=line, blocking=True)\n",
+    "    sleep(3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # Execute func1 and func2 in parallel.\n",
+    "# ray.get([bsay.remote(\"Hello everybody!!\"), capture_and_return_emos.remote(6)])\n",
+    "\n",
+    "process1 = multiprocessing.Process(target=bsay(\"Hello everybody!!\"))\n",
+    "process1.start()\n",
+    "process2 = multiprocessing.Process(target=capture_and_return_emos(6)) #, daemon=False\n",
+    "process2.start()\n",
+    "\n",
+    "\n",
+    "#process1.join()\n",
+    "process2.join()\n",
+    "\n",
+    "\n",
+    "# p1 = threading.Thread(target=capture_and_return_emos(6))\n",
+    "# p1.start()\n",
+    "# p2 = threading.Thread(target=bsay(\"Hello everybody!!\"))\n",
+    "# p2.start()\n",
+    "# p2.join()\n",
+    "\n"
    ]
   },
   {
