file name change and retrained the ValAr model

--- a/scratch/model_training4affective_states.ipynb
+++ b/scratch/model_training4affective_states.ipynb
@@ -65,6 +65,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.22038910505836576, 1.0, -0.3, 0.2573314490060687)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['arousal'].mean(), data['arousal'].max(), data['arousal'].min(), data['arousal'].std() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
