Trying to make parallel processing work

--- a/scratch/Cnn/tes.ipynb
+++ b/scratch/Cnn/tes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -17,21 +17,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T20:43:02.206028200Z",
-     "start_time": "2023-12-18T20:43:02.196942100Z"
+     "end_time": "2024-01-09T08:54:17.687343900Z",
+     "start_time": "2024-01-09T08:54:14.637076600Z"
     }
    },
    "id": "83744285757ad7fc"
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "WindowsPath('C:/Users/NickosKal/Desktop/University/Semester 3/Period 4/Intelligent Interactive Systems/IIS_Project')"
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,23 +42,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T20:42:25.197063100Z",
-     "start_time": "2023-12-18T20:42:25.146030300Z"
+     "end_time": "2024-01-09T08:54:18.365281900Z",
+     "start_time": "2024-01-09T08:54:18.332331400Z"
     }
    },
    "id": "5d888d96a354ff8e"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [
     {
-     "data": {
-      "text/plain": "'C:\\\\Users\\\\NickosKal\\\\Desktop\\\\University\\\\Semester 3\\\\Period 4\\\\Intelligent Interactive Systems\\\\IIS_Project\\\\scratch\\\\Cnn\\\\\\\\'"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'DIR_PATH' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mDIR_PATH\u001B[49m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'DIR_PATH' is not defined"
+     ]
     }
    ],
    "source": [
@@ -67,21 +70,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T20:42:28.392059200Z",
-     "start_time": "2023-12-18T20:42:28.360647200Z"
+     "end_time": "2024-01-09T08:54:22.651943300Z",
+     "start_time": "2024-01-09T08:54:21.363734100Z"
     }
    },
    "id": "c935e1e6a5788563"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "WindowsPath('C:/Users/NickosKal/Desktop/University/Semester 3/Period 4/Intelligent Interactive Systems/IIS_Project/models/model_.h5')"
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,8 +95,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T20:43:04.396305100Z",
-     "start_time": "2023-12-18T20:43:04.377106200Z"
+     "end_time": "2024-01-09T08:54:25.891702900Z",
+     "start_time": "2024-01-09T08:54:25.872163200Z"
     }
    },
    "id": "8ff257868792a7de"
