--- a/scratch/model_test_ValAr.ipynb
+++ b/scratch/model_test_ValAr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
     "\n",
     "        self.net = nn.Sequential(\n",
     "            nn.Linear(features_in, 15),\n",
+    "            nn.ReLU(),\n",
     "            nn.Linear(15, features_out)\n",
     "            #nn.Linear(features_in, features_out)\n",
     "        )\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,18 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def return_emo_state(arr):\n",
-    "    if arr[0] > 0 and arr[1] > 0:\n",
+    "    if arr[0] > 0 and arr[1] > 0.2203:\n",
     "        return 'Happy'\n",
-    "    elif arr[0] < 0 and arr[1] > 0:\n",
+    "    elif arr[0] < 0 and arr[1] > 0.2203:\n",
     "        return 'Angry'\n",
-    "    elif arr[0] > 0 and arr[1] < 0:\n",
+    "    elif arr[0] > 0 and arr[1] < 0.2203:\n",
     "        return 'Calm'\n",
-    "    elif arr[0] < 0 and arr[1] < 0:\n",
+    "    elif arr[0] < 0 and arr[1] < 0.2203:\n",
     "        return 'Sad'\n",
     "    else:\n",
     "        return 'Neutral'"
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,19 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "emotion\n",
-       "Happy      38\n",
-       "Angry      16\n",
+       "Sad        196\n",
+       "Happy       31\n",
+       "Calm        23\n",
+       "Angry        8\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,6 +207,13 @@
    "source": [
     "d_df.value_counts()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
