--- a/scratch/parallel_processing_test.ipynb
+++ b/scratch/parallel_processing_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +57,47 @@
        "{'message': 'Successfully changed my LEDs', 'success': True}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "furhat.set_led(red=100, green=50, blue=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['no']\n"
+     ]
+    }
+   ],
+   "source": [
+    "furhat.say(text=\"Would you like to take a break?\", blocking=True)\n",
+    "result = furhat.listen()\n",
+    "texts = result.__dict__['_message'].split(' ')\n",
+    "print(texts)\n",
+    "if \"yes\" in texts:\n",
+    "    furhat.say(text=\"Great! let's take a 10 second break\", blocking=True)\n",
+    "    furhat.gesture(name=\"CloseEyes\")\n",
+    "    sleep(10)\n",
+    "    furhat.gesture(name=\"OpenEyes\")\n",
+    "    furhat.say(text=\"Let's continue.\")\n",
+    "      # Exit the loop if the user wants a break\n",
+    "\n",
+    "elif \"no\" in texts:\n",
+    "    furhat.say(text=\"Great! Let's continue.\")\n",
+    "      # Exit the loop if the user doesn't want a break\n",
+    "\n",
+    "else:\n",
+    "    furhat.say(text=\"I'm sorry, I didn't get that, can you repeat it?\")"
    ]
   },
   {
@@ -75,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "detector = Detector(device=\"cuda\")"
+    "detector = Detector(device=\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +138,13 @@
     "path=Path(os.getcwd()).parent\n",
     "DIR_PATH=str(path) + '\\\\'\n",
     "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device = \"cpu\" #\"cuda\" if torch.cuda.is_available() else\n",
     "model = torch.load(Path(DIR_PATH + 'models\\\\best_model_12.pt') ).to(device) #best_emo_model(local_path).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -233,16 +267,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n",
       "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
       "  warnings.warn(\n",
       "c:\\Users\\Audit\\anaconda3\\envs\\iis\\Lib\\site-packages\\torchvision\\transforms\\functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
@@ -269,22 +293,23 @@
     "    sleep(3)\n",
     "    furhat.say(text=line, blocking=True)\n",
     "    sleep(3)\n",
-    "    furhat.say(text=line, blocking=True)\n",
-    "    sleep(3)\n",
     "\n",
     "\n",
     "\n",
     "# # Execute func1 and func2 in parallel.\n",
     "# ray.get([bsay.remote(\"Hello everybody!!\"), capture_and_return_emos.remote(6)])\n",
-    "\n",
-    "process1 = multiprocessing.Process(target=bsay(\"Hello everybody!!\"))\n",
-    "process1.start()\n",
+    "queue = multiprocessing.Queue()\n",
+    "# process1 = multiprocessing.Process(target=bsay, args=(\"Hello everybody!!\",))\n",
     "process2 = multiprocessing.Process(target=capture_and_return_emos(6)) #, daemon=False\n",
+    "# process1.start()\n",
     "process2.start()\n",
+    "bsay(\"Hello everybody!!\")\n",
     "\n",
+    "# process1.join()\n",
     "\n",
-    "#process1.join()\n",
-    "process2.join()\n",
+    "# process1.terminate()\n",
+    "# process2.terminate()\n",
+    "\n",
     "\n",
     "\n",
     "# p1 = threading.Thread(target=capture_and_return_emos(6))\n",
@@ -297,17 +322,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process1.start()\n",
+    "process2.start()\n",
+    "\n",
+    "\n",
+    "process1.join()\n",
+    "process2.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anger 2\n",
-      "happiness 9\n",
-      "neutral 5\n",
-      "happiness 9\n"
+      "neutral 4\n",
+      "neutral 4\n"
      ]
     }
    ],
